--- a/builder/css/dashboard-style.css
+++ b/builder/css/dashboard-style.css
@@ -333,6 +333,9 @@ Files inside this folder can contain abstract settings, helpers or functions. Th
   height: 1px;
   background: #D7DBDE; }
 
+div#karma-builder-layout img {
+  visibility: inherit; }
+
 #karma-add-element html, #karma-add-element body, #karma-add-element span, #karma-add-element object, #karma-add-element iframe,
 #karma-add-element h1, #karma-add-element h2, #karma-add-element h3, #karma-add-element h4, #karma-add-element h5, #karma-add-element h6, #karma-add-element p, #karma-add-element blockquote, #karma-add-element pre,
 #karma-add-element abbr, #karma-add-element address, #karma-add-element cite, #karma-add-element code,
